objects/copado__Deployment_Flow__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all Branch Management features will be enabled in the Deployment Flow.</description>
        <inlineHelpText>If checked, all Branch Management features will be enabled in the Deployment Flow.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Block_Commits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, committing changes on user stories linked to this deployment flow will not be allowed.</description>
        <inlineHelpText>If checked, committing changes on user stories linked to this deployment flow will not be allowed.</inlineHelpText>
        <label>Block Commits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch_Management_Coordinates__c</fullName>
        <description>This field is used to store the Branch Management Step locations of each box. This field should not be added to the page layout.</description>
        <label>Branch Management Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Calculate_Based_on__c</fullName>
        <inlineHelpText>If Branch is selected, Branch Management page will work as before, if User Story selected, calculation and result will be based on User Stories.</inlineHelpText>
        <label>Calculate Based on</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>User Story</fullName>
                    <default>true</default>
                    <label>User Story</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Copado_DX_Mode__c</fullName>
        <inlineHelpText>Selected DX mode will determine scratch metadata sources.</inlineHelpText>
        <label>Copado DX Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Git Artifacts</fullName>
                </value>
                <value>
                    <fullName>Package Artifacts</fullName>
                </value>
                <value>
                    <fullName>Branches</fullName>
                </value>
                <value>
                    <fullName>Org Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Disable_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Deployment Flow Steps best practices validations will be disabled.</description>
        <inlineHelpText>If checked, Deployment Flow Steps best practices validations will be disabled.</inlineHelpText>
        <label>Disable Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Enable_Copado_DX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Copado DX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Equal_Branch_Environment_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Environment names must equal their corresponding Branches in the Deployment Flow Steps.</description>
        <inlineHelpText>If checked, Environment names must equal their corresponding Branches in the Deployment Flow Steps.</inlineHelpText>
        <label>Enforce branch/env naming convention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_Auto_Resolve__c</fullName>
        <description>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</description>
        <inlineHelpText>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</inlineHelpText>
        <label>Exclude From Auto Resolve</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Auto_Resolve_Exceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Flow_Step_Coordinates__c</fullName>
        <description>This field is used to store the Deployment Flow Step locations of each box. This field should not be added to the page layout.</description>
        <label>Flow Step Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Git Repository linked to the Deployment Flow. All branches of the Deployment Flow Steps must exist in this Git Repository.</description>
        <inlineHelpText>Git Repository linked to the Deployment Flow. All branches of the Deployment Flow Steps must exist in this Git Repository.</inlineHelpText>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipName>Deployment_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Tabs__c</fullName>
        <inlineHelpText>Tabs to hide in Branch Management detail window</inlineHelpText>
        <label>Hide Tabs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commits Ahead</fullName>
                </value>
                <value>
                    <fullName>Commits Behind</fullName>
                </value>
                <value>
                    <fullName>Deployment Error</fullName>
                </value>
                <value>
                    <fullName>File Differences</fullName>
                </value>
                <value>
                    <fullName>Auto Resolved Conflicts</fullName>
                </value>
                <value>
                    <fullName>Merged Files</fullName>
                </value>
                <value>
                    <fullName>Selenium Test Groups</fullName>
                </value>
                <value>
                    <fullName>Compliance Scan Results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Main_Branch__c</fullName>
        <description>Main branch of the selected Git Repository (e.g. master).</description>
        <inlineHelpText>Main branch of the selected Git Repository (e.g. master).</inlineHelpText>
        <label>Main Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Manage_Branches__c</fullName>
        <description>Link to open the Pipeline Manager to promote and back promote User Stories.</description>
        <formula>HYPERLINK(&apos;/apex/&apos;&amp;
IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,
  IF(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)
)&amp;IF( ISPICKVAL(copado__Calculate_Based_on__c, &apos;User Story&apos;), IF( copado__Active__c,&apos;PipelineManager?mode=manager&amp;id=&apos;&amp;Id, &apos;PipelineManager?mode=diagram&amp;id=&apos;&amp;Id), &apos;BranchManagement?id=&apos;&amp;Id), &apos;Pipeline Manager&apos;, IF($User.UIThemeDisplayed != &quot;Theme4d&quot;,&apos;_blank&apos;,&apos;_self&apos;))</formula>
        <inlineHelpText>Link to open the Branch and Environment Management page for the Deployment Flow.</inlineHelpText>
        <label>Manage Releases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Merge_Strategy__c</fullName>
        <inlineHelpText>When a conflicted file cannot be semantically merged during an Auto Resolve, the entire file is overwritten by default. You can choose to overwrite only the conflicting lines and merge the mergeable lines; Copado uses the &quot;Theirs&quot; git merge strategy.</inlineHelpText>
        <label>Auto Resolve Conflict Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Overwrite file</label>
                </value>
                <value>
                    <fullName>Theirs</fullName>
                    <label>Overwrite conflicting lines only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Order_by__c</fullName>
        <inlineHelpText>Fill that field only if you want to change the selected user stories order on deployment.
This value will prefill the order by field on related Promotion record creation if set. (usage exp: name asc)</inlineHelpText>
        <label>Order User Stories by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Static_Code_Analysis_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Static Code Analysis settings used whenever the analysis is run in Environments or User Stories linked to the Deployment Flow.</description>
        <inlineHelpText>Static Code Analysis settings used whenever the analysis is run in Environments or User Stories linked to the Deployment Flow.</inlineHelpText>
        <label>Static Code Analysis Settings</label>
        <referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
        <relationshipName>Deployment_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pipeline</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Active__c</columns>
        <columns>copado__Manage_Branches__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Main_Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pipeline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>